atualizando e documentando o controlador de estados
